[package]
authors.workspace = true
description = "Shared utilities"
edition.workspace = true
license.workspace = true
name = "pallets-common"
repository.workspace = true
version.workspace = true

[dependencies]
codec = { features = ["derive", "max-encoded-len"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
xcm = { workspace = true }
xcm-executor = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"xcm-executor/std",
	"xcm/std",
]
