[package]
authors.workspace = true
description = "Shared utilities between relay runtimes"
edition.workspace = true
license.workspace = true
name = "relay-common"
repository.workspace = true
version.workspace = true

[dependencies]
sp-runtime = { workspace = true }
pallet-staking-reward-fn = { workspace = true }
polkadot-primitives = { workspace = true }

[features]
default = ["std"]
std = [
	"pallet-staking-reward-fn/std",
	"polkadot-primitives/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"polkadot-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
