[package]
authors.workspace = true
description = "Shared utilities between relay runtimes"
edition.workspace = true
license.workspace = true
name = "relay-common"
repository.workspace = true
version.workspace = true

[dependencies]
sp-runtime = { workspace = true }
pallet-staking-reward-fn = { workspace = true }
polkadot-primitives = { workspace = true }

# TODO: dev scaffolding for the py/trsry wind-down PR; deleted together with
# `src/dap_satellite_shim.rs` + `src/dap_shim.rs` once the workspace is bumped to
# `pallet-dap-satellite >= 0.3.0` + the SDK2604 release of `pallet-dap`. The PR is merged only
# after that bump, so this code never reaches production.
codec = { workspace = true }
log = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-dap-satellite = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-dap-satellite/std",
	"pallet-staking-reward-fn/std",
	"polkadot-primitives/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-dap-satellite/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-dap-satellite/try-runtime",
	"sp-runtime/try-runtime",
]
